# wing-zone-telegram-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sources.yml
.github/workflows/: ci.yml
prompts/: channel_voice.md  glossary.md  live_race_notes.md
tests/: test_editor.py  test_sources.py  test_text.py
wingzone_bot/: __init__.py  cli.py  composer.py  config.py  models.py  scheduler.py  source_config.py  sources.py  storage.py  telegram.py  text.py
